--- a/FE/Admin/public/index.html
+++ b/FE/Admin/public/index.html
@@ -27,7 +27,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200;300;400;500;600;700;800;900;1000&display=swap" rel="stylesheet">
-    <script src="https://cdn.tiny.cloud/1/uk2g00la7gm187t8xyx4i0d0yt5a9q996yn1mdhu3gn7tn1h/tinymce/6/tinymce.min.js" referrerpolicy="origin"></script>    <title>React App</title>
+    <script src="https://cdn.tiny.cloud/1/uk2g00la7gm187t8xyx4i0d0yt5a9q996yn1mdhu3gn7tn1h/tinymce/6/tinymce.min.js" referrerpolicy="origin"></script>
+    <title>React App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
